add photo navbar header

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <title>Home Page</title>
 </head>
 <body>
+ 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><b>SARVGYA JOB PORTAL</b></a>
@@ -31,11 +32,52 @@
           </div>
         </div>
       </nav>
-
-
-
-
-
+      <!--Body image-->
+      <div class="bg-image min-mobile mid-mobile max-mobile tablet laptop" 
+      style="
+             background-size:105%;">
+ </div>
+ 
+ <style>
+     @media (max-width: 322px) {
+         .min-mobile {
+             background-image: url('https://th.bing.com/th/id/OIG1.Z_v0p40Kr58qnxaaw6AQ?w=1024&h=1024&rs=1&pid=ImgDetMain');
+             height: 50vh;
+             background-size: 10%;
+             background-position:bottom;
+         }
+     }
+     @media (min-width: 323px ) and (max-width:376px) {
+        .mid-mobile {
+            background-image: url('https://th.bing.com/th/id/OIG1.Z_v0p40Kr58qnxaaw6AQ?w=1024&h=1024&rs=1&pid=ImgDetMain');
+            height: 58vh;
+            background-size: 10vh;
+            background-position:bottom;
+        }
+    }
+    @media (min-width: 378px ) and (max-width:426px ) {
+        .mid-mobile {
+            background-image: url('https://th.bing.com/th/id/OIG1.Z_v0p40Kr58qnxaaw6AQ?w=1024&h=1024&rs=1&pid=ImgDetMain');
+            height:65vh;
+            background-size: 10vh;
+            background-position:bottom;
+        }
+    }
+    @media (min-width: 425px ) and (max-width:769px ) {
+        .tablet {
+            background-image: url('https://th.bing.com/th/id/OIG1.Z_v0p40Kr58qnxaaw6AQ?w=1024&h=1024&rs=1&pid=ImgDetMain');
+            height:65vh;
+            background-position: top;
+        }
+    }
+    @media (min-width:760px) and (max-width:2240px) {
+        .tablet {
+            background-image: url('https://th.bing.com/th/id/OIG1.Z_v0p40Kr58qnxaaw6AQ?w=1024&h=1024&rs=1&pid=ImgDetMain');
+            height:65vh;
+            background-position: top;
+        }
+    }
+ </style>
 
 
 
@@ -161,7 +203,7 @@
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
-
+  
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
