--- a/templates/index.html
+++ b/templates/index.html
@@ -114,7 +114,7 @@
         }
     }
 </style>
-<p style="padding:2rem 0rem 0 0.6rem;font-size:2rem;">Open Position</p>
+<p style="padding:2rem 0rem 0 0.6rem;font-size:2rem;">JOB OPENINGS</p>
 <div>
     <p></p>
 </div>
